--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css">
     <title>IstoryAI: An Interactive Reading Assistant Tool for Filipino Short Stories</title>
+    <style>
+        h1 {
+            font-family: Geneva, Tahoma, Verdana, sans-serif;
+            font-size: 16px;
+            font-style: normal;
+            font-variant: normal;
+            font-weight: 700;
+            line-height: 26.399999618530273px;
+        }
+    </style>
 </head>
 
 <head>
@@ -17,7 +27,7 @@
     <div class="container-fluid text-center mt-1">
         <img src="assets/icons/icon.png" width="150px">
         <div id="main" class="mb-2">
-            <p>IstoryAI: A Dyslexic Reading Assistant Tool for Filipino Short Stories</p>
+            <h1>IstoryAI: A Dyslexic Reading Assistant Tool for Filipino Short Stories</h1>
             <div class="form-check form-switch form-check-inline">
                 <input class="form-check-input" type="checkbox" id="toggleNER" name="toggleNER" checked>
                 <label class="form-check-label" for="toggleNER">Named Entity Recognition</label>
